[package]
name = "shuttle-env-vars"
version = "0.26.1"
edition = "2021"
authors = ["Roberto Huertas <roberto.huertas@outlook.com>"]
description = "Use .env files to set environment variables in your Shuttle services"
license = "MIT"
repository = "https://github.com/robertohuertasm/shuttle-env-vars"
categories = ["web-programming", "configuration"]
keywords = ["shuttle", "dotenv", "env", "env-vars"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = { version = "0.26.0", default-features = false }
shuttle-service = "0.26.0"
shuttle-static-folder = "0.26.0"
dotenvy = "0.15"
serde = "1.0"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.7"
tokio = { version = "1", features = ["macros", "rt"] }
